--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body::after{
 
 .container form button{
     width: 100%;
-    height: 42px;
+    height: 45px;
     color: #fff;
     background: #20232c;
     font-size: 1rem;
@@ -166,4 +166,5 @@ body::after{
 
 .container form button:hover{
     background: #675afe;
+    font-size: 1.3rem;
 }
