--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     min-height: 100vh;
     padding: 0 10px;
     background: url(images/background.png);
-    background-size: 70vw;
+    background-size: cover;
     overflow: hidden;
 }
 
@@ -157,7 +157,7 @@ body::after{
     width: 100%;
     height: 45px;
     color: #fff;
-    background: #20232c;
+    background: rgb(43, 162, 43);
     font-size: 1rem;
     cursor: pointer;
     border-radius: 5px;
